@@ -1,7 +1,7 @@
 /*
- * DataAction2.java
+ * DataAction.java
  *
- * Copyright 2009-2010 Patrick Mairif.
+ * Copyright 2009-2012 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
  * 
  * tabstop=4, charset=UTF-8
@@ -19,7 +19,7 @@ import de.highbyte_le.weberknecht.request.DatabaseCapable;
  * 
  * @author pmairif
  */
-public interface DataAction2 extends DatabaseCapable, ExecutableAction {
+public interface DataAction extends DatabaseCapable, ExecutableAction {
 	
 	/**
 	 * <p>set the mime type with {@link HttpServletResponse#setContentType(String)}
