@@ -1,6 +1,7 @@
 next (1.0):
 	- additional action view processors configurable
 	- Controller moved to de.highbyte_le.weberknecht.Controller
+	- DataAction2 renamed to DataAction
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
